--- a/src/lib/public/index.html
+++ b/src/lib/public/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <link rel="stylesheet" href="main.css" />
+    </head>
     <body>
         <p>Hello, world!</p>
         <script src="scripts/main.js"></script>
